sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
def testSort() {
^AlgBubbleSort1:2: error: expected class or object definition
def testSort() {
^AlgBubbleSort1:23: error: Missing closing brace `}' assumed here
def bubbleSort()  {
^